[project]
name = "xai_github"
version = "0.1.0"
description = "Component library for GitHub"
authors = [{ name = "Eduardo Gonzalez", email = "egonzalez@xpress.ai" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xpressai/xai-github"
keywords = ["xircuits", "github"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
